--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ hr {
 }
 .menu {
   display: flex;
-
+  align-items: center;
   justify-content: space-between;
   margin: 2rem 4rem 1.5rem 4rem;
 }
